hphp/test/zend/good/ext/intl/tests/breakiter___construct.php.expectf

Fatal error: Call to private IntlBreakIterator::__construct() from invalid context in %s/breakiter___construct.php on line 4
